--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-ramblers",
-  "description": "client application supporting ramblers group website example: https://www.ekwg.co.uk",
+  "description": "client application supporting ramblers group website example: https://www.example.co.uk",
   "version": "2.0.0",
   "license": "ISC",
   "private": true,
