- upgrade to Angular 16 - and other dependencies - removed dependency on Angular2CSV and copied an older version of the typescript code into the project to csv-export.ts - all tests passing - needed production build to be "optimization": {"styles": {"inlineCritical": false }},

--- a/angular.json
+++ b/angular.json
@@ -63,6 +63,7 @@
                   "with": "projects/ngx-ramblers/src/environments/environment.production.ts"
                 }
               ],
+              "optimization": {"styles": {"inlineCritical": false }},
               "outputHashing": "all"
             },
             "development": {
