--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "analyze": "webpack-bundle-analyzer dist/ngx-ramblers/stats-es2015.json",
     "build:stats": "ng build --project ngx-ramblers --configuration production --statsJson=true",
     "build": "ng build --project ngx-ramblers --build-optimizer --progress --configuration production",
-    "clean": "rm -rf node_modules",
+    "clean": "rm -rf node_modules && rm -rf server/node_modules",
+    "reinstall": "npm run clean && npm install && npm run postbuild",
     "e2e": "ng e2e",
     "lint": "ng lint",
     "lintfix": "ng lint --fix",
     "postbuild": "npm install --prefix server",
-    "postinstall": "ngcc",
     "serve": "ng serve --project ngx-ramblers --configuration development",
     "test": "ng test"
   },
@@ -22,23 +22,21 @@
     "server/node_modules"
   ],
   "dependencies": {
-    "@angular/animations": "14.1.3",
-    "@angular/cdk": "14.1.3",
-    "@angular/common": "14.1.3",
-    "@angular/compiler": "14.1.3",
-    "@angular/core": "14.1.3",
-    "@angular/forms": "14.1.3",
-    "@angular/platform-browser": "14.1.3",
-    "@angular/platform-browser-dynamic": "14.1.3",
-    "@angular/router": "14.1.3",
+    "@angular/animations": "16.2.10",
+    "@angular/cdk": "16.2.9",
+    "@angular/common": "16.2.10",
+    "@angular/compiler": "16.2.10",
+    "@angular/core": "16.2.10",
+    "@angular/forms": "16.2.10",
+    "@angular/platform-browser": "16.2.10",
+    "@angular/platform-browser-dynamic": "16.2.10",
+    "@angular/router": "16.2.10",
     "@fortawesome/angular-fontawesome": "0.10.2",
     "@fortawesome/fontawesome-free": "6.1.1",
     "@fortawesome/fontawesome-svg-core": "6.1.0",
     "@fortawesome/free-brands-svg-icons": "6.1.1",
     "@fortawesome/free-solid-svg-icons": "6.1.0",
-    "@ng-select/ng-select": "9.1.0",
-    "@types/lodash-es": "4.17.3",
-    "angular2-csv": "0.2.9",
+    "@ng-select/ng-select": "11.1.1",
     "aws-sdk": "2.596.0",
     "bootstrap": "4.6.2",
     "copyfiles": "2.1.1",
@@ -49,39 +47,39 @@
     "jquery": "3.5.0",
     "js-yaml": "3.13.1",
     "json2csv": "4.5.4",
-    "lodash-es": "4.17.15",
-    "mailchimp-api": "2.0.7",
-    "marked": "0.8.0",
+    "lodash-es": "4.17.21",
+    "marked": "4.3.0",
     "matchdep": "2.0.0",
     "meetup-api": "1.4.38",
     "method-override": "3.0.0",
     "moment": "2.24.0",
     "moment-timezone": "0.5.27",
     "mongoose": "5.10.11",
-    "ng-csv": "0.3.6",
-    "ng2-file-upload": "1.4.0",
-    "ngx-bootstrap": "9.0.0",
+    "ng2-file-upload": "5.0.0",
+    "ngx-bootstrap": "11.0.2",
     "ngx-image-cropper": "6.2.2",
-    "ngx-logger": "4.1.9",
-    "ngx-markdown": "14.0.1",
-    "ngx-tagify": "0.7.0",
+    "ngx-logger": "5.0.12",
+    "ngx-markdown": "16.0.0",
+    "ngx-tagify": "15.0.5",
     "ngx-ui-switch": "14.0.3",
     "path": "0.12.7",
     "popper.js": "1.16.1",
     "rxjs": "6.6.7",
     "showdown": "2.1.0",
     "url-polyfill": "1.1.12",
-    "zone.js": "0.11.8"
+    "zone.js": "0.13.0"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "13.1.0",
-    "@angular-devkit/build-angular": "14.1.3",
-    "@angular/cli": "14.1.3",
-    "@angular/compiler-cli": "14.1.3",
-    "@angular/language-service": "14.1.3",
-    "@types/jasmine": "3.5.0",
-    "@types/jasminewd2": "2.0.8",
-    "@types/node": "12.11.1",
+    "@angular-builders/custom-webpack": "16.0.1",
+    "@angular-devkit/build-angular": "16.2.7",
+    "@angular/cli": "16.2.7",
+    "@angular/compiler-cli": "16.2.10",
+    "@angular/language-service": "16.2.10",
+    "@types/jasmine": "5.1.1",
+    "@types/jasminewd2": "2.0.12",
+    "@types/lodash-es": "4.17.3",
+    "@types/marked": "4.3.2",
+    "@types/ws": "8.5.4",
     "codelyzer": "6.0.1",
     "jasmine-core": "3.5.0",
     "jasmine-spec-reporter": "4.2.1",
@@ -95,11 +93,11 @@
     "source-map-explorer": "2.4.2",
     "ts-node": "8.5.4",
     "tslint": "6.1.3",
-    "typescript": "4.7.4",
+    "typescript": "4.9.5",
     "webpack-bundle-analyzer": "3.6.0"
   },
   "engines": {
-    "node": "v18.17.1",
-    "npm": "9.6.7"
+    "node": "v20.8.1",
+    "npm": "10.1.0"
   }
 }
