--- a/server/package.json
+++ b/server/package.json
@@ -41,11 +41,11 @@
     "@serenity-js/protractor": "2.14.0",
     "@serenity-js/rest": "2.14.0",
     "@serenity-js/serenity-bdd": "2.14.0",
-    "@types/express": "4.16.1",
+    "@types/express-serve-static-core": "4.17.39",
     "@types/jasmine": "3.4.0",
     "@types/lodash-es": "4.17.3",
     "@types/mailchimp__mailchimp_marketing": "3.0.9",
-    "@types/node": "10.14.20",
+    "@types/node": "20.8.1",
     "@types/sinon": "4.3.3",
     "@types/sinon-chai": "3.2.2",
     "angular-logger": "1.3.2",
@@ -59,8 +59,8 @@
     "csv-parse": "5.3.5",
     "debug": "4.2.0",
     "errorhandler": "1.5.1",
-    "express": "4.17.1",
-    "express-session": "1.17.1",
+    "express": "4.18.2",
+    "express-session": "1.17.3",
     "instagram-node": "0.5.8",
     "jasmine": "3.5.0",
     "js-yaml": "3.13.1",
@@ -77,8 +77,6 @@
     "mongoose-unique-validator": "2.0.3",
     "morgan": "1.9.1",
     "multer": "1.3.0",
-    "newrelic": "1.22.2",
-    "nodemon": "2.0.2",
     "npm-failsafe": "0.4.1",
     "open": "6.0.0",
     "passport": "0.4.0",
@@ -94,11 +92,11 @@
     "ts-node": "8.5.4",
     "tslint": "6.1.3",
     "tslint-microsoft-contrib": "6.2.0",
-    "typescript": "4.5.5",
+    "typescript": "4.9.5",
     "xlsx": "0.16.5"
   },
   "engines": {
-    "node": "v18.17.1",
-    "npm": "9.6.7"
+    "node": "v20.8.1",
+    "npm": "10.1.0"
   }
 }
