--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -15,6 +15,7 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "outDir": "ts-gen",
+    "skipLibCheck": true,
     "sourceMap": true,
     "target": "es2015"
   },
