- added album row type for dynamic content - possible views for album is carousel, gallery and grid - added ng-gallery dependency for rendering albums as gallery - fixed aspect ratio setting on ImageCropperAndResizerComponent - now defaults to free selection unless aspect ratio set - fixed PageService.areaExistsFor() returning false before config loaded - album-index row type added but not implemented yet

--- a/angular.json
+++ b/angular.json
@@ -20,6 +20,9 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": [
+              "lodash"
+            ],
             "outputPath": "dist/ngx-ramblers",
             "index": "projects/ngx-ramblers/src/index.html",
             "main": "projects/ngx-ramblers/src/main.ts",
@@ -49,12 +52,12 @@
                 {
                   "type": "initial",
                   "maximumWarning": "500kb",
-                  "maximumError": "5mb"
+                  "maximumError": "6mb"
                 },
                 {
                   "type": "anyComponentStyle",
                   "maximumWarning": "2kb",
-                  "maximumError": "5mb"
+                  "maximumError": "6mb"
                 }
               ],
               "fileReplacements": [
