--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "core-js": "3.6.1",
     "express": "4.17.3",
     "express-session": "1.17.0",
+    "hammerjs": "2.0.8",
     "instagram-node": "0.5.8",
     "jquery": "3.5.0",
     "js-yaml": "3.13.1",
@@ -55,6 +56,7 @@
     "moment": "2.24.0",
     "moment-timezone": "0.5.27",
     "mongoose": "5.10.11",
+    "ng-gallery": "11.0.0",
     "ng2-file-upload": "5.0.0",
     "ngx-bootstrap": "11.0.2",
     "ngx-image-cropper": "6.2.2",
@@ -64,7 +66,7 @@
     "ngx-ui-switch": "14.0.3",
     "path": "0.12.7",
     "popper.js": "1.16.1",
-    "rxjs": "6.6.7",
+    "rxjs": "7.8.1",
     "showdown": "2.1.0",
     "url-polyfill": "1.1.12",
     "zone.js": "0.13.0"
