--- a/server/package.json
+++ b/server/package.json
@@ -16,8 +16,7 @@
     "serenity": "protractor protractor.conf.js",
     "report": "serenity-bdd run",
     "postinstall": "tsc",
-    "server-live": "node --optimize_for_size --max_old_space_size=460 ts-gen/server/lib/server",
-    "preserver-live": "tsc",
+    "server-live": "tsx watch lib/server",
     "server": "node --optimize_for_size --max_old_space_size=460 ts-gen/server/lib/server",
     "test": "failsafe protractor report",
     "tsc": "tsc  --project ./tsconfig.json",
@@ -41,6 +40,7 @@
     "@serenity-js/protractor": "2.14.0",
     "@serenity-js/rest": "2.14.0",
     "@serenity-js/serenity-bdd": "2.14.0",
+    "@types/debug": "4.1.12",
     "@types/express-serve-static-core": "4.17.39",
     "@types/jasmine": "3.4.0",
     "@types/lodash-es": "4.17.3",
@@ -89,14 +89,15 @@
     "serve-favicon": "2.5.0",
     "sinon": "8.1.1",
     "source-map-support": "0.5.19",
-    "ts-node": "8.5.4",
+    "ts-node": "10.9.2",
     "tslint": "6.1.3",
     "tslint-microsoft-contrib": "6.2.0",
+    "tsx": "4.7.0",
     "typescript": "4.9.5",
     "xlsx": "0.16.5"
   },
   "engines": {
-    "node": "v20.8.1",
-    "npm": "10.1.0"
+    "node": "v20.11.0",
+    "npm": "10.2.4"
   }
 }
