--- a/server/package.json
+++ b/server/package.json
@@ -47,6 +47,7 @@
     "@types/lodash-es": "4.17.3",
     "@types/mailchimp__mailchimp_marketing": "3.0.9",
     "@types/mongoose": "5.10.5",
+    "@types/multer": "1.4.11",
     "@types/node": "20.8.1",
     "@types/sinon": "4.3.3",
     "@types/sinon-chai": "3.2.2",
