--- a/server/package.json
+++ b/server/package.json
@@ -41,14 +41,18 @@
     "@serenity-js/protractor": "2.14.0",
     "@serenity-js/rest": "2.14.0",
     "@serenity-js/serenity-bdd": "2.14.0",
+    "@types/bcryptjs": "2.4.6",
     "@types/debug": "4.1.12",
     "@types/express-serve-static-core": "4.17.39",
     "@types/jasmine": "3.4.0",
+    "@types/jsonwebtoken": "9.0.6",
     "@types/lodash-es": "4.17.3",
     "@types/mailchimp__mailchimp_marketing": "3.0.9",
     "@types/mongoose": "5.10.5",
     "@types/multer": "1.4.11",
     "@types/node": "20.8.1",
+    "@types/passport": "1.0.16",
+    "@types/passport-jwt": "4.0.1",
     "@types/sinon": "4.3.3",
     "@types/sinon-chai": "3.2.2",
     "angular-logger": "1.3.2",
