--- a/.github/workflows/build-push-and-deploy-ngx-ramblers-docker-image-via-heroku.yml
+++ b/.github/workflows/build-push-and-deploy-ngx-ramblers-docker-image-via-heroku.yml
@@ -18,7 +18,7 @@ jobs:
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag ngx-ramblers:${{ github.run_number }}
+        run: docker build . --build-arg CHROME_VERSION=${{ secrets.CHROME_VERSION }} --build-arg CHROMEDRIVER_VERSION=${{ secrets.CHROMEDRIVER_VERSION }} --file Dockerfile --tag ngx-ramblers:${{ github.run_number }}
 
       - name: Tag the Docker image (github run number ${{ github.run_number }})
         run: docker tag ngx-ramblers:${{ github.run_number }} ${{ secrets.DOCKER_USERNAME }}/ngx-ramblers:${{ github.run_number }}
