- Various Docker Build Improvements:   - tag and push latest first to allow pull earlier if testing locally   - fly port number changed to 5001   - Removed webdriver-manager as this is not required   - log CHROME_VERSION and CHROMEDRIVER_VERSION   - Switch to using npx @puppeteer/browsers install   - App port changed from 5000 to 5001 to avoid conflicts on new Mac   - NPM run serenity-bdd-update done within Dockerfile not in step before serenity is run   - Removed derivation of CHROMEDRIVER_PATH env - is injected now   - standardised CHROME and CHROMEDRIVER variable names   - reflected required changes in protractor.conf.js   - Removed heroku build and config files - App config and bug fixes   - Changes to config components to avoid runtime error if mail config not yet populated   - Turned off logging on many endpoints

--- a/.github/workflows/build-push-and-deploy-ngx-ramblers-docker-image-via-heroku.yml
+++ b/.github/workflows/build-push-and-deploy-ngx-ramblers-docker-image-via-heroku.yml
@@ -18,19 +18,19 @@ jobs:
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Build the Docker image
-        run: docker build . --build-arg CHROME_VERSION=${{ secrets.CHROME_VERSION }} --build-arg CHROMEDRIVER_VERSION=${{ secrets.CHROMEDRIVER_VERSION }} --file Dockerfile --tag ngx-ramblers:${{ github.run_number }}
-
-      - name: Tag the Docker image (github run number ${{ github.run_number }})
-        run: docker tag ngx-ramblers:${{ github.run_number }} ${{ secrets.DOCKER_USERNAME }}/ngx-ramblers:${{ github.run_number }}
-
-      - name: Push the Docker image to Docker Hub (github run number ${{ github.run_number }})
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/ngx-ramblers:${{ github.run_number }}
+        run: docker build . --build-arg CHROME_VERSION=${{ secrets.CHROME_VERSION }} --file Dockerfile --tag ngx-ramblers:${{ github.run_number }}
 
       - name: Tag the Docker image (latest)
         run: docker tag ngx-ramblers:${{ github.run_number }} ${{ secrets.DOCKER_USERNAME }}/ngx-ramblers:latest
 
       - name: Push the Docker image to Docker Hub (latest)
         run: docker push ${{ secrets.DOCKER_USERNAME }}/ngx-ramblers:latest
+
+      - name: Tag the Docker image (github run number ${{ github.run_number }})
+        run: docker tag ngx-ramblers:${{ github.run_number }} ${{ secrets.DOCKER_USERNAME }}/ngx-ramblers:${{ github.run_number }}
+
+      - name: Push the Docker image to Docker Hub (github run number ${{ github.run_number }})
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/ngx-ramblers:${{ github.run_number }}
 
       - name: Install Heroku CLI
         run: curl https://cli-assets.heroku.com/install.sh | sh
