--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,7 @@
     "lint": "tslint --config ./tslint.json --project ./tsconfig.json --format stylish",
     "lintfix": "tslint --config ./tslint.json --project ./tsconfig.json --format stylish --fix",
     "lintversion": "tslint --version",
-    "pree2e": "webdriver-manager update --gecko false  --standalone --versions.standalone=2.53.1 --versions.chrome=2.35",
-    "preserenity": "serenity-bdd update --ignoreSSL",
+    "serenity-bdd-update": "serenity-bdd update --ignoreSSL",
     "serenity": "protractor protractor.conf.js",
     "report": "serenity-bdd run",
     "postinstall": "tsc",
@@ -20,9 +19,7 @@
     "server": "node --optimize_for_size --max_old_space_size=460 ts-gen/server/lib/server",
     "test": "failsafe protractor report",
     "tsc": "tsc  --project ./tsconfig.json",
-    "unit-test": ". test-setenv.sh && mocha --config=.mocharc.yml",
-    "webdriver-manager": "webdriver-manager",
-    "webdriver:update": "npm run webdriver-manager update"
+    "unit-test": ". test-setenv.sh && mocha --config=.mocharc.yml"
   },
   "nodemonConfig": {
     "ignore": [
