- Removed Heroku from build steps - Removed app and image from fly.toml as these are both passed in fly deploy command - Removed sed commands from build steps as all variables are now passed in fly deploy command - Removed http_service.allow_origin as this does not seem to be a valid option - Added deploy-to-environments.ts to roll out changes to all configured environments

--- a/server/package.json
+++ b/server/package.json
@@ -1,22 +1,23 @@
 {
   "name": "ngx-ramblers",
-  "description": "server application to support ngx-ramblers application",
-  "version": "2.0.0",
+  "description": "Server application to support ngx-ramblers application",
+  "version": "3.0.0",
   "license": "ISC",
   "private": true,
   "scripts": {
     "clean": "rimraf target",
+    "deploy": "ts-node deploy/deploy-to-environments.ts",
     "e2e": "protractor ./protractor.conf.js",
     "e2e-single": "protractor ./protractor.conf.js --mochaOpts.grep",
     "lint": "tslint --config ./tslint.json --project ./tsconfig.json --format stylish",
     "lintfix": "tslint --config ./tslint.json --project ./tsconfig.json --format stylish --fix",
     "lintversion": "tslint --version",
-    "serenity-bdd-update": "serenity-bdd update --ignoreSSL",
-    "serenity": "protractor protractor.conf.js",
-    "report": "serenity-bdd run",
     "postinstall": "tsc",
-    "server-live": "tsx watch lib/server",
+    "report": "serenity-bdd run",
+    "serenity": "protractor protractor.conf.js",
+    "serenity-bdd-update": "serenity-bdd update --ignoreSSL",
     "server": "node --optimize_for_size --max_old_space_size=460 ts-gen/server/lib/server",
+    "server-live": "tsx watch lib/server",
     "test": "failsafe protractor report",
     "tsc": "tsc  --project ./tsconfig.json",
     "unit-test": ". test-setenv.sh && mocha --config=.mocharc.yml"
