--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "moment-timezone": "0.5.27",
     "mongoose": "5.10.11",
     "ng-gallery": "11.0.0",
+    "ng-recaptcha": "12.0.2",
     "ng2-file-upload": "5.0.0",
     "ngx-bootstrap": "11.0.2",
     "ngx-capture": "0.13.0",
