--- a/package.json
+++ b/package.json
@@ -22,21 +22,21 @@
     "server/node_modules"
   ],
   "dependencies": {
-    "@angular/animations": "16.2.10",
-    "@angular/cdk": "16.2.9",
-    "@angular/common": "16.2.10",
-    "@angular/compiler": "16.2.10",
-    "@angular/core": "16.2.10",
-    "@angular/forms": "16.2.10",
-    "@angular/platform-browser": "16.2.10",
-    "@angular/platform-browser-dynamic": "16.2.10",
-    "@angular/router": "16.2.10",
+    "@angular/animations": "18.2.12",
+    "@angular/cdk": "18.2.12",
+    "@angular/common": "18.2.12",
+    "@angular/compiler": "18.2.12",
+    "@angular/core": "18.2.12",
+    "@angular/forms": "18.2.12",
+    "@angular/platform-browser": "18.2.12",
+    "@angular/platform-browser-dynamic": "18.2.12",
+    "@angular/router": "18.2.12",
     "@fortawesome/angular-fontawesome": "0.10.2",
     "@fortawesome/fontawesome-free": "6.1.1",
     "@fortawesome/fontawesome-svg-core": "6.1.0",
     "@fortawesome/free-brands-svg-icons": "6.1.1",
     "@fortawesome/free-solid-svg-icons": "6.1.0",
-    "@ng-select/ng-select": "11.1.1",
+    "@ng-select/ng-select": "13.9.1",
     "aws-sdk": "2.596.0",
     "bootstrap": "4.6.2",
     "copyfiles": "2.1.1",
@@ -47,8 +47,9 @@
     "jquery": "3.5.0",
     "js-yaml": "3.13.1",
     "json2csv": "4.5.4",
+    "jsonc-parser": "3.3.1",
     "lodash-es": "4.17.21",
-    "marked": "4.3.0",
+    "marked": "12.0.0",
     "matchdep": "2.0.0",
     "meetup-api": "1.4.38",
     "method-override": "3.0.0",
@@ -56,29 +57,28 @@
     "moment-timezone": "0.5.27",
     "mongoose": "5.10.11",
     "ng-gallery": "11.0.0",
-    "ng-recaptcha": "12.0.2",
-    "ng2-file-upload": "5.0.0",
-    "ngx-bootstrap": "11.0.2",
+    "ng-recaptcha-2": "14.0.0",
+    "ng2-file-upload": "7.0.1",
+    "ngx-bootstrap": "18.1.3",
     "ngx-capture": "0.13.0",
     "ngx-google-analytics": "14.0.1",
     "ngx-image-cropper": "6.2.2",
     "ngx-logger": "5.0.12",
-    "ngx-markdown": "16.0.0",
+    "ngx-markdown": "18.1.0",
     "ngx-tagify": "15.0.5",
     "ngx-ui-switch": "14.0.3",
     "path": "0.12.7",
     "popper.js": "1.16.1",
     "rxjs": "7.8.1",
-    "showdown": "2.1.0",
     "url-polyfill": "1.1.12",
-    "zone.js": "0.13.0"
+    "zone.js": "0.14.10"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "16.0.1",
-    "@angular-devkit/build-angular": "16.2.7",
-    "@angular/cli": "16.2.7",
-    "@angular/compiler-cli": "16.2.10",
-    "@angular/language-service": "16.2.10",
+    "@angular-builders/custom-webpack": "18.0.0",
+    "@angular-devkit/build-angular": "18.2.12",
+    "@angular/cli": "18.2.12",
+    "@angular/compiler-cli": "18.2.12",
+    "@angular/language-service": "18.2.12",
     "@types/jasmine": "5.1.1",
     "@types/jasminewd2": "2.0.12",
     "@types/lodash-es": "4.17.3",
@@ -97,7 +97,7 @@
     "source-map-explorer": "2.4.2",
     "ts-node": "8.5.4",
     "tslint": "6.1.3",
-    "typescript": "4.9.5",
+    "typescript": "5.4.5",
     "webpack-bundle-analyzer": "3.6.0"
   },
   "engines": {
