- Amend walk start location using map pin - First leaflet commit which includes ngx-leaflet dependency - New functionality allows start point to be edited by dragging pin on map - Lat/Long, grid reference, postcode and location updated and saved on walk - Walk Edit Maps view can be toggled between Pin Location View and Google Maps - Walk View can be toggled between Pin Location View and Google Maps - Walk start/end location now standardised to fall in line with Ramblers data structure - Data migration performed automatically on detection of walks that are in the old format - trigger workflow for pre-main branch - Includes workaround for markdown not rendering on some components - documented in https://github.com/jfcere/ngx-markdown/issues/555

--- a/.github/workflows/build-push-and-deploy-ngx-ramblers-docker-image.yml
+++ b/.github/workflows/build-push-and-deploy-ngx-ramblers-docker-image.yml
@@ -2,7 +2,7 @@ name: Deploy and Build Docker Image and Deploy to Fly.io
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "pre-main" ]
   pull_request:
     branches: [ "main" ]
 
