--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "analyze": "webpack-bundle-analyzer dist/ngx-ramblers/stats-es2015.json",
     "build:stats": "ng build --project ngx-ramblers --configuration production --statsJson=true",
-    "build": "ng build --project ngx-ramblers --build-optimizer --progress --configuration production",
+    "build": "ng build --project ngx-ramblers --progress --configuration production",
     "clean": "rm -rf node_modules && rm -rf server/node_modules",
     "reinstall": "npm run clean && npm install && npm run postbuild",
     "e2e": "ng e2e",
@@ -31,6 +31,7 @@
     "@angular/platform-browser": "18.2.12",
     "@angular/platform-browser-dynamic": "18.2.12",
     "@angular/router": "18.2.12",
+    "@asymmetrik/ngx-leaflet": "18.0.1",
     "@fortawesome/angular-fontawesome": "0.10.2",
     "@fortawesome/fontawesome-free": "6.1.1",
     "@fortawesome/fontawesome-svg-core": "6.1.0",
@@ -48,6 +49,7 @@
     "js-yaml": "3.13.1",
     "json2csv": "4.5.4",
     "jsonc-parser": "3.3.1",
+    "leaflet": "1.9.4",
     "lodash-es": "4.17.21",
     "marked": "12.0.0",
     "matchdep": "2.0.0",
@@ -81,10 +83,12 @@
     "@angular/language-service": "18.2.12",
     "@types/jasmine": "5.1.1",
     "@types/jasminewd2": "2.0.12",
+    "@types/leaflet": "1.9.14",
     "@types/lodash-es": "4.17.3",
     "@types/marked": "4.3.2",
     "@types/ws": "8.5.4",
     "codelyzer": "6.0.1",
+    "file-loader": "6.2.0",
     "jasmine-core": "3.5.0",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "6.3.2",
