- Album Image List bulk resizing enhancements:   - Server-side bulk resizing has now been implemented using sharp, a High performance Node.js image processing library (https://sharp.pixelplumbing.com)   - System Settings (/admin/system-settings?tab=images) now provides global defaults that control the Default Aspect Ratio and the Default Maximum Image Size of image lists (the data sources for albums).   - Resize Existing Images, Sort by image date, Reverse sort order, Clear images & Create First Image actions have now been moved under a dropdown menu in order to fit into the available horizontal space on the album row.   - When an album is edited, these system level values are offered as defaults but can be overridden on a per-album basis.   - If an existing album has saved images that require resizing, this can be applied via Resize Existing Images button within the Image Actions dropdown when the album is being edited.   - If a Default Maximum Image Size has been configured on the album, when new images are added to the album they are immediately resized (in memory) to no more than this size.   - Because album resizing can be time-consuming, the actions are now sent to the server via a websocket connection and a progress event is sent back to the client during the course of each server resize operation, in order to provide visual feedback about what is happening. - Album enhancements:   - It's now possible to hide the thumbnail selector on a gallery.   - When the View mode is Grid, all images are displayed but are rendered lazily when the page is scrolled down. Previously images had to be displayed by clicking the "more images" button which displayed 10 images until all images had been rendered. This was not a good user experience compared to the new behaviour.   - It's now possible to delete an unwanted image list within the /admin/carousel-editor page. This only deletes the image list content metadata from the database and does not delete any S3 images. - Walk E

--- a/projects/ngx-ramblers/proxy.config.json
+++ b/projects/ngx-ramblers/proxy.config.json
@@ -2,6 +2,15 @@
   "/api": {
     "target": "http://localhost:5001",
     "secure": false,
+    "changeOrigin": true,
+    "ws": true,
+    "logLevel": "debug"
+  },
+  "/ws": {
+    "target": "ws://localhost:5001",
+    "secure": false,
+    "changeOrigin": true,
+    "ws": true,
     "logLevel": "debug"
   }
 }
