--- a/server/package.json
+++ b/server/package.json
@@ -94,6 +94,7 @@
     "request": "2.88.2",
     "rimraf": "3.0.2",
     "serve-favicon": "2.5.0",
+    "sharp": "0.33.5",
     "sinon": "8.1.1",
     "source-map-support": "0.5.19",
     "ts-node": "10.9.2",
@@ -101,6 +102,7 @@
     "tslint-microsoft-contrib": "6.2.0",
     "tsx": "4.7.0",
     "typescript": "4.9.5",
+    "ws": "8.18.1",
     "xlsx": "0.16.5"
   },
   "engines": {
