--- a/fly.toml
+++ b/fly.toml
@@ -1,14 +1,21 @@
 primary_region = "lhr"
 
 [http_service]
-internal_port = 5001
-force_https = true
-auto_stop_machines = "stop"
 auto_start_machines = true
-min_machines_running = 0
+auto_stop_machines = false
+force_https = true
+internal_port = 5001
+min_machines_running = 1
 processes = ["app"]
 
+[[http_service.checks]]
+interval = "15s"
+timeout = "2s"
+grace_period = "5s"
+method = "GET"
+path = "/api/health"
+
 [[vm]]
-memory = "2gb"
+memory = "1gb"
 cpu_kind = "shared"
 cpus = 1
