--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "express": "4.17.3",
     "express-session": "1.17.0",
     "hammerjs": "2.0.8",
+    "heic2any": "^0.0.4",
     "jquery": "3.5.0",
     "js-yaml": "3.13.1",
     "json2csv": "4.5.4",
