--- a/.github/workflows/deploy-to-environments.yml
+++ b/.github/workflows/deploy-to-environments.yml
@@ -43,6 +43,9 @@ jobs:
       - name: Install ts-node
         run: npm install -g ts-node
 
+      - name: Install Flyctl
+        uses: superfly/flyctl-actions/setup-flyctl@master
+
       - name: Deploy to selected environments
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
