--- a/server/package.json
+++ b/server/package.json
@@ -90,6 +90,7 @@
     "passport-jwt": "4.0.0",
     "protractor": "5.4.4",
     "pug": "2.0.0-beta.12",
+    "puppeteer": "24.4.0",
     "rand-token": "0.4.0",
     "request": "2.88.2",
     "rimraf": "3.0.2",
@@ -101,6 +102,7 @@
     "tslint": "6.1.3",
     "tslint-microsoft-contrib": "6.2.0",
     "tsx": "4.7.0",
+    "turndown": "7.2.0",
     "typescript": "4.9.5",
     "ws": "8.18.1",
     "xlsx": "0.16.5"
