--- a/.github/workflows/build-push-and-deploy-ngx-ramblers-docker-image.yml
+++ b/.github/workflows/build-push-and-deploy-ngx-ramblers-docker-image.yml
@@ -15,15 +15,20 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build the Docker image
         run: docker build . --build-arg CHROME_VERSION=${{ secrets.CHROME_VERSION }} --file Dockerfile --tag ngx-ramblers:${{ github.run_number }}
 
       - name: Tag the Docker image (latest)
+        if: github.ref_name == 'main'
         run: docker tag ngx-ramblers:${{ github.run_number }} ${{ secrets.DOCKER_USERNAME }}/ngx-ramblers:latest
 
       - name: Push the Docker image to Docker Hub (latest)
+        if: github.ref_name == 'main'
         run: docker push ${{ secrets.DOCKER_USERNAME }}/ngx-ramblers:latest
 
       - name: Tag the Docker image (github run number ${{ github.run_number }})
