--- a/.github/workflows/deploy-to-environments.yml
+++ b/.github/workflows/deploy-to-environments.yml
@@ -8,13 +8,37 @@ on:
         required: true
         default: 'all'
         type: string
+      image_tag:
+        description: 'Docker image tag to deploy (e.g., latest or a previous run number)'
+        required: true
+        default: 'latest'
+        type: string
 
 env:
   NODE_VERSION: '20'
 
 jobs:
-  deploy:
+  set-environments:
     runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+    steps:
+      - id: set-matrix
+        run: |
+          if [ "${{ github.event.inputs.environments }}" = "all" ]; then
+            echo '["staging","production"]' > envs.json
+          else
+            echo '["'${{ github.event.inputs.environments }}'"]' | sed 's/ /","/g' > envs.json
+          fi
+          echo "matrix=$(cat envs.json)" >> $GITHUB_OUTPUT
+  deploy:
+    needs: set-environments
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        environment: ${{ fromJson(needs.set-environments.outputs.matrix) }}
+    name: Deploy to ${{ matrix.environment }}
+    continue-on-error: true
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -43,6 +67,12 @@ jobs:
       - name: Install ts-node
         run: npm install -g ts-node
 
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
       - name: Install Flyctl
         uses: superfly/flyctl-actions/setup-flyctl@master
 
@@ -52,15 +82,11 @@ jobs:
           flyctl version
           echo "FLYCTL_PATH=$(which flyctl)" >> $GITHUB_ENV
 
-      - name: Deploy to selected environments
+      - name: Deploy to ${{ matrix.environment }}
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
         run: |
-          if [ "${{ github.event.inputs.environments }}" = "all" ]; then
-            ts-node server/deploy/deploy-to-environments.ts
-          else
-            ts-node server/deploy/deploy-to-environments.ts --environment "${{ github.event.inputs.environments }}"
-          fi
+          ts-node server/deploy/deploy-to-environments.ts --environment "${{ matrix.environment }}" --image-tag "${{ github.event.inputs.image_tag }}"
 
       - name: Cleanup sensitive files
         if: always()
