--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "express": "4.17.3",
     "express-session": "1.17.0",
     "hammerjs": "2.0.8",
+    "he": "1.2.0",
     "heic2any": "^0.0.4",
     "jquery": "3.5.0",
     "js-yaml": "3.13.1",
@@ -70,10 +71,12 @@
     "ngx-markdown": "19.0.0",
     "ngx-tagify": "15.0.5",
     "ngx-ui-switch": "15.0.0",
+    "papaparse": "5.5.3",
     "path": "0.12.7",
     "popper.js": "1.16.1",
     "rxjs": "7.8.1",
     "server": "^1.0.41",
+    "turndown": "7.2.0",
     "url-polyfill": "1.1.12",
     "zone.js": "0.15.0"
   },
@@ -88,6 +91,7 @@
     "@types/leaflet": "1.9.14",
     "@types/lodash-es": "4.17.3",
     "@types/marked": "4.3.2",
+    "@types/turndown": "5.0.5",
     "@types/ws": "8.5.4",
     "codelyzer": "6.0.1",
     "file-loader": "6.2.0",
