--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "aws-backup": "ts-node aws-backup/backup-s3-images.ts",
     "clean": "rimraf target/site/serenity",
     "deploy": "ts-node deploy/deploy-to-environments.ts --environment",
+    "manage-configs": "ts-node deploy/manage-configs.ts",
     "lint": "tslint --config ./tslint.json --project ./tsconfig.json --format stylish",
     "lintfix": "tslint --config ./tslint.json --project ./tsconfig.json --format stylish --fix",
     "lintversion": "tslint --version",
@@ -67,6 +68,7 @@
     "bcryptjs": "2.4.3",
     "body-parser": "1.17.1",
     "bottleneck": "2.19.5",
+    "commander": "14.0.0",
     "compression": "1.7.4",
     "connect-livereload": "0.3.0",
     "csv-parse": "5.3.5",
@@ -75,6 +77,7 @@
     "express": "4.18.2",
     "express-session": "1.17.3",
     "fs": "0.0.1-security",
+    "inquirer": "12.8.2",
     "js-yaml": "3.13.1",
     "json2csv": "3.11.5",
     "jsonwebtoken": "8.5.1",
@@ -116,5 +119,8 @@
   "engines": {
     "node": "v20.11.0",
     "npm": "10.2.4"
+  },
+  "devDependencies": {
+    "@types/inquirer": "9.0.8"
   }
 }
