--- a/.github/workflows/build-push-and-deploy-ngx-ramblers-docker-image.yml
+++ b/.github/workflows/build-push-and-deploy-ngx-ramblers-docker-image.yml
@@ -6,13 +6,40 @@ on:
   pull_request:
     branches: [ "main" ]
 
+env:
+  NODE_VERSION: '20'
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
     concurrency: deploy-group
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+
+      - name: Install root dependencies
+        run: npm ci
+
+      - name: Install server dependencies
+        run: npm ci
+        working-directory: ./server
+
+      - name: Create configs directory
+        run: mkdir -p non-vcs/fly-io
+
+      - name: Create configs.json from secrets
+        env:
+          CONFIGS_JSON: ${{ secrets.CONFIGS_JSON }}
+        run: |
+          echo "$CONFIGS_JSON" > non-vcs/fly-io/configs.json
+
+      - name: Install ts-node
+        run: npm install -g ts-node
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
@@ -40,19 +67,12 @@ jobs:
       - name: Install Flyctl
         uses: superfly/flyctl-actions/setup-flyctl@master
 
-      - name: Verify fly.toml existence
-        run: |
-          ls -la
-          if [ -f "fly.toml" ]; then echo "fly.toml found"; else echo "fly.toml not found" && exit 1; fi
-
-      - name: Sync fly.toml to Fly.io and deploy image ngx-ramblers:${{ github.run_number }}
+      - name: Deploy image ngx-ramblers:${{ github.run_number }} to fly.io
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
         run: |
-          flyctl config validate --config fly.toml --app ${{ secrets.APP_NAME }}
-          flyctl deploy --app ${{ secrets.APP_NAME }} --config fly.toml --image ${{ secrets.DOCKER_USERNAME }}/ngx-ramblers:${{ github.run_number }} --detach
+          ts-node server/deploy/deploy-to-environments.ts --environment "${{ secrets.APP_NAME }}" --image-tag "${{ github.run_number }}"
+      - name: Cleanup sensitive files
+        if: always()
+        run: rm -f non-vcs/fly-io/configs.json
 
-      - name: Scale App to 1
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-        run: flyctl scale count 1 --app ${{ secrets.APP_NAME }}
