- Fix for Cookie Banner Breaks Automated Ramblers Upload #43 - This completes: https://github.com/nbarrett/ngx-ramblers/issues/43 - Cookie banner accepted before every interaction - Also removed protractor option is wdio implementation is tried and tested

--- a/server/package.json
+++ b/server/package.json
@@ -16,10 +16,8 @@
     "report": "serenity-bdd run --features lib/serenity-js/features",
     "postreport": "mkdir -p target/site/archive && tar -czf target/site/archive/serenity-reports.zip -C target/site/serenity .",
     "serenity-bdd-update": "serenity-bdd update --ignoreSSL",
-    "serenity-protractor": "failsafe clean serenity-run-protractor report",
-    "serenity-run-protractor": "protractor protractor.conf.js --log-level=DEBUG",
-    "serenity-run-wdio": "wdio run ./wdio.conf.ts",
-    "serenity-wdio": "failsafe clean serenity-run-wdio report",
+    "serenity-run": "wdio run ./wdio.conf.ts",
+    "serenity": "failsafe clean serenity-run report",
     "server": "node --optimize_for_size --max_old_space_size=460 ts-gen/server/lib/server",
     "server-live": "tsx watch lib/server",
     "test": "failsafe serenity report",
@@ -40,7 +38,6 @@
     "@serenity-js/console-reporter": "3.31.12",
     "@serenity-js/core": "3.31.12",
     "@serenity-js/mocha": "3.31.12",
-    "@serenity-js/protractor": "3.31.12",
     "@serenity-js/serenity-bdd": "3.31.12",
     "@serenity-js/web": "3.31.12",
     "@serenity-js/webdriverio": "3.31.12",
@@ -96,7 +93,6 @@
     "open": "6.0.0",
     "passport": "0.4.0",
     "passport-jwt": "4.0.0",
-    "protractor": "7.0.0",
     "puppeteer": "24.4.0",
     "rand-token": "0.4.0",
     "request": "2.88.2",
