--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "method-override": "3.0.0",
     "moment": "2.24.0",
     "moment-timezone": "0.5.27",
-    "mongoose": "5.10.11",
+    "mongoose": "8.17.1",
     "ng-gallery": "11.0.0",
     "ng-recaptcha-2": "15.0.2",
     "ng2-file-upload": "8.0.0",
@@ -91,6 +91,7 @@
     "@types/leaflet": "1.9.14",
     "@types/lodash-es": "4.17.3",
     "@types/marked": "4.3.2",
+    "@types/mongoose": "5.11.97",
     "@types/turndown": "5.0.5",
     "@types/ws": "8.5.4",
     "codelyzer": "6.0.1",
@@ -104,14 +105,14 @@
     "karma-jasmine-html-reporter": "1.5.1",
     "moment-locales-webpack-plugin": "1.2.0",
     "source-map-explorer": "2.4.2",
-    "ts-node": "8.5.4",
+    "ts-node": "10.9.2",
     "tslint": "6.1.3",
     "typescript": "5.7.3",
     "webpack-bundle-analyzer": "3.6.0",
     "winston": "3.17.0"
   },
   "engines": {
-    "node": "v20.11.0",
-    "npm": "10.2.4"
+    "node": "v20.19.4",
+    "npm": "10.8.2"
   }
 }
