--- a/server/package.json
+++ b/server/package.json
@@ -7,23 +7,25 @@
   "scripts": {
     "aws-backup": "ts-node aws-backup/backup-s3-images.ts",
     "clean": "rimraf target/site/serenity",
-    "deploy": "ts-node deploy/deploy-to-environments.ts --environment",
-    "manage-configs": "ts-node deploy/manage-configs.ts",
+    "clean-node": "rm -rf node_modules",
+    "deploy": "ts-node deploy/deploy-to-environments.ts",
     "lint": "tslint --config ./tslint.json --project ./tsconfig.json --format stylish",
     "lintfix": "tslint --config ./tslint.json --project ./tsconfig.json --format stylish --fix",
     "lintversion": "tslint --version",
+    "manage-configs": "ts-node deploy/manage-configs.ts",
     "postinstall": "tsc",
-    "report": "serenity-bdd run --features lib/serenity-js/features",
     "postreport": "mkdir -p target/site/archive && tar -czf target/site/archive/serenity-reports.zip -C target/site/serenity .",
+    "reinstall": "npm run clean-node && npm install",
+    "report": "serenity-bdd run --features lib/serenity-js/features",
+    "serenity": "failsafe clean serenity-run report",
     "serenity-bdd-update": "serenity-bdd update --ignoreSSL",
     "serenity-run": "wdio run ./wdio.conf.ts",
-    "serenity": "failsafe clean serenity-run report",
     "server": "node --optimize_for_size --max_old_space_size=460 ts-gen/server/lib/server",
     "server-live": "tsx watch lib/server",
     "test": "failsafe serenity report",
     "tsc": "tsc --project ./tsconfig.json",
     "tsc-watch": "tsc --project ./tsconfig.json --watch",
-    "unit-test": ". test-setenv.sh && mocha --config=.mocharc.yml"
+    "unit-test": ". test-setenv.sh && mocha  --watch"
   },
   "nodemonConfig": {
     "ignore": [
@@ -43,12 +45,14 @@
     "@serenity-js/webdriverio": "3.31.12",
     "@types/bcryptjs": "2.4.6",
     "@types/debug": "4.1.12",
+    "@types/expect": "24.3.2",
     "@types/express-serve-static-core": "4.17.39",
+    "@types/inquirer": "9.0.8",
     "@types/jsonwebtoken": "9.0.6",
     "@types/lodash-es": "4.17.3",
     "@types/mailchimp__mailchimp_marketing": "3.0.9",
     "@types/mocha": "10.0.10",
-    "@types/mongoose": "5.10.5",
+    "@types/mongoose": "5.11.97",
     "@types/multer": "1.4.11",
     "@types/node": "20.8.1",
     "@types/passport": "1.0.16",
@@ -71,6 +75,8 @@
     "csv-parse": "5.3.5",
     "debug": "4.2.0",
     "errorhandler": "1.5.1",
+    "esbuild": "0.19.12",
+    "expect": "30.0.5",
     "express": "4.18.2",
     "express-session": "1.17.3",
     "fs": "0.0.1-security",
@@ -85,8 +91,8 @@
     "mocha": "11.1.0",
     "moment": "2.19.3",
     "moment-timezone": "0.5.13",
-    "mongoose": "5.10.11",
-    "mongoose-unique-validator": "2.0.3",
+    "mongoose": "8.17.1",
+    "mongoose-unique-validator": "5.0.1",
     "morgan": "1.9.1",
     "multer": "1.3.0",
     "npm-failsafe": "1.3.0",
@@ -104,7 +110,6 @@
     "source-map-support": "0.5.19",
     "ts-node": "10.9.2",
     "tslint": "6.1.3",
-    "tslint-microsoft-contrib": "6.2.0",
     "tsx": "4.7.0",
     "turndown": "7.2.0",
     "typescript": "5.7.3",
@@ -113,10 +118,7 @@
     "xlsx": "0.16.5"
   },
   "engines": {
-    "node": "v20.11.0",
-    "npm": "10.2.4"
-  },
-  "devDependencies": {
-    "@types/inquirer": "9.0.8"
+    "node": "v20.19.4",
+    "npm": "10.8.2"
   }
 }
