--- a/.github/workflows/build-push-and-deploy-ngx-ramblers-docker-image.yml
+++ b/.github/workflows/build-push-and-deploy-ngx-ramblers-docker-image.yml
@@ -7,8 +7,7 @@ on:
     branches: [ "main" ]
 
 env:
-  NODE_VERSION: '20'
-
+  NODE_VERSION: '22.19.0'
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -23,10 +22,10 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
 
       - name: Install root dependencies
-        run: npm ci
+        run: npm ci --legacy-peer-deps
 
       - name: Install server dependencies
-        run: npm ci
+        run: npm ci --legacy-peer-deps
         working-directory: ./server
 
       - name: Create configs directory
@@ -75,4 +74,3 @@ jobs:
       - name: Cleanup sensitive files
         if: always()
         run: rm -f non-vcs/fly-io/configs.json
-
