--- a/.github/workflows/deploy-to-environments.yml
+++ b/.github/workflows/deploy-to-environments.yml
@@ -15,7 +15,7 @@ on:
         type: string
 
 env:
-  NODE_VERSION: '20'
+  NODE_VERSION: '22.19.0'
 
 jobs:
   set-environments:
@@ -66,10 +66,10 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
 
       - name: Install root dependencies
-        run: npm ci
+        run: npm ci --legacy-peer-deps
 
       - name: Install server dependencies
-        run: npm ci
+        run: npm ci --legacy-peer-deps
         working-directory: ./server
 
       - name: Create configs directory
