--- a/angular.json
+++ b/angular.json
@@ -62,7 +62,7 @@
             "scripts": [
               "./node_modules/jquery/dist/jquery.slim.min.js",
               "./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
-              "./node_modules/marked/marked.min.js"
+              "./node_modules/marked/lib/marked.umd.js"
             ],
             "browser": "projects/ngx-ramblers/src/main.ts"
           },
