--- a/package.json
+++ b/package.json
@@ -22,22 +22,23 @@
     "server/node_modules"
   ],
   "dependencies": {
-    "@angular/animations": "19.1.3",
-    "@angular/cdk": "18.2.12",
-    "@angular/common": "19.1.3",
-    "@angular/compiler": "19.1.3",
-    "@angular/core": "19.1.3",
-    "@angular/forms": "19.1.3",
-    "@angular/platform-browser": "19.1.3",
-    "@angular/platform-browser-dynamic": "19.1.3",
-    "@angular/router": "19.1.3",
-    "@bluehalo/ngx-leaflet": "19.0.0",
+    "@angular/animations": "20.2.4",
+    "@angular/cdk": "20.2.2",
+    "@angular/common": "20.2.4",
+    "@angular/compiler": "20.2.4",
+    "@angular/core": "20.2.4",
+    "@angular/forms": "20.2.4",
+    "@angular/platform-browser": "20.2.4",
+    "@angular/platform-browser-dynamic": "20.2.4",
+    "@angular/router": "20.2.4",
+    "@bluehalo/ngx-leaflet": "20.0.0",
     "@fortawesome/angular-fontawesome": "0.10.2",
     "@fortawesome/fontawesome-free": "6.1.1",
     "@fortawesome/fontawesome-svg-core": "6.1.0",
     "@fortawesome/free-brands-svg-icons": "6.1.1",
     "@fortawesome/free-solid-svg-icons": "6.1.0",
-    "@ng-select/ng-select": "14.2.0",
+    "@ng-select/ng-select": "20.1.3",
+    "@yaireo/tagify": "4.35.4",
     "aws-sdk": "2.596.0",
     "bootstrap": "4.6.2",
     "copyfiles": "2.1.1",
@@ -46,14 +47,14 @@
     "express-session": "1.17.0",
     "hammerjs": "2.0.8",
     "he": "1.2.0",
-    "heic2any": "^0.0.4",
+    "heic2any": "0.0.4",
     "jquery": "3.5.0",
     "js-yaml": "3.13.1",
     "json2csv": "4.5.4",
     "jsonc-parser": "3.3.1",
     "leaflet": "1.9.4",
     "lodash-es": "4.17.21",
-    "marked": "15.0.6",
+    "marked": "16.2.1",
     "matchdep": "2.0.0",
     "meetup-api": "1.4.38",
     "method-override": "3.0.0",
@@ -61,31 +62,31 @@
     "moment-timezone": "0.5.27",
     "mongoose": "8.17.1",
     "ng-gallery": "11.0.0",
-    "ng-recaptcha-2": "15.0.2",
+    "ng-recaptcha-2": "16.0.1",
     "ng2-file-upload": "8.0.0",
-    "ngx-bootstrap": "19.0.2",
+    "ngx-bootstrap": "20.0.1",
     "ngx-capture": "0.13.0",
     "ngx-google-analytics": "14.0.1",
     "ngx-image-cropper": "6.2.2",
     "ngx-logger": "5.0.12",
-    "ngx-markdown": "19.0.0",
+    "ngx-markdown": "20.1.0",
     "ngx-tagify": "15.0.5",
     "ngx-ui-switch": "15.0.0",
     "papaparse": "5.5.3",
     "path": "0.12.7",
     "popper.js": "1.16.1",
     "rxjs": "7.8.1",
-    "server": "^1.0.41",
+    "server": "1.0.41",
     "turndown": "7.2.0",
     "url-polyfill": "1.1.12",
     "zone.js": "0.15.0"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "19.0.0",
-    "@angular-devkit/build-angular": "19.1.4",
-    "@angular/cli": "19.1.4",
-    "@angular/compiler-cli": "19.1.3",
-    "@angular/language-service": "19.1.3",
+    "@angular-builders/custom-webpack": "20.0.0",
+    "@angular-devkit/build-angular": "20.2.2",
+    "@angular/cli": "20.2.2",
+    "@angular/compiler-cli": "20.2.4",
+    "@angular/language-service": "20.2.4",
     "@types/jasmine": "5.1.1",
     "@types/jasminewd2": "2.0.12",
     "@types/leaflet": "1.9.14",
@@ -98,7 +99,7 @@
     "file-loader": "6.2.0",
     "jasmine-core": "3.5.0",
     "jasmine-spec-reporter": "4.2.1",
-    "karma": "6.3.2",
+    "karma": "6.4.4",
     "karma-chrome-launcher": "3.1.0",
     "karma-coverage-istanbul-reporter": "2.1.1",
     "karma-jasmine": "2.0.1",
@@ -107,12 +108,12 @@
     "source-map-explorer": "2.4.2",
     "ts-node": "10.9.2",
     "tslint": "6.1.3",
-    "typescript": "5.7.3",
+    "typescript": "5.9.2",
     "webpack-bundle-analyzer": "3.6.0",
     "winston": "3.17.0"
   },
   "engines": {
-    "node": "v20.19.4",
-    "npm": "10.8.2"
+    "node": "v22.19.0",
+    "npm": "10.9.3"
   }
 }
