--- a/.github/workflows/deploy-to-environments.yml
+++ b/.github/workflows/deploy-to-environments.yml
@@ -66,10 +66,10 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
 
       - name: Install root dependencies
-        run: npm ci --legacy-peer-deps
+        run: npm ci
 
       - name: Install server dependencies
-        run: npm ci --legacy-peer-deps
+        run: npm ci
         working-directory: ./server
 
       - name: Create configs directory
