- Frontend + server polish, test gating, and doc consolidation
Summary
- Remove unused deps from root (jquery, express, express-session, copyfiles, matchdep, path).
- Migrate server S3 code from aws-sdk v2 to @aws-sdk/client-s3 with proper typings (no any).
- Add pre-push hook to run frontend + server unit tests on pushes to main/pre-main.
- Gate GitHub Actions deploy: add test job (FE headless + server mocha); deploy needs: test; build Docker image after tests pass.
- Stabilise Karma/Jasmine test config (headless by default in CI).
- Fix frontend unit test types: add missing fields.inputSource in ExtendedGroupEvent test helper.
- Navbar + header: right-align desktop tabs, no-wrap nav labels at all widths; header buttons centered vertically; small view stacking preserved.
- Consolidate assistant docs: move to AGENTS.md; keep CLAUDE.md as stub pointing to AGENTS.md; include full former content in AGENTS.md appendix.

Details
- Root package.json: removed unused frontend deps; updated test script to headless.
- Server: replaced aws-sdk v2 usage with v3 client (S3, Commands); added robust Body handling (Readable | Uint8Array | Blob).
- scripts/githooks/pre-push: runs npm test and npm run test:server for main/pre-main pushes.
- Workflow: split into test + deploy; deploy runs only if tests pass; still builds and pushes Docker, then deploys via Flyctl.
- Tests: server mocha script unit-test:once added; root test:server alias added.
- Docs: new AGENTS.md; CLAUDE.md stub; added IDE setup notes and Git Hooks section.

Motivation
This commit completes the dependency tidy-up and ensures both frontend and backend tests gate deploys. It also removes LLM-specific naming (CLAUDE.md) in favor of AGENTS.md while preserving all guidance.

--- a/server/package.json
+++ b/server/package.json
@@ -25,7 +25,8 @@
     "test": "failsafe serenity report",
     "tsc": "tsc --project ./tsconfig.json",
     "tsc-watch": "tsc --project ./tsconfig.json --watch",
-    "unit-test": ". test-setenv.sh && mocha  --watch"
+    "unit-test": ". test-setenv.sh && mocha  --watch",
+    "unit-test:once": "bash -lc 'source ./test-setenv.sh && mocha'"
   },
   "nodemonConfig": {
     "ignore": [
