--- a/.github/workflows/build-push-and-deploy-ngx-ramblers-docker-image.yml
+++ b/.github/workflows/build-push-and-deploy-ngx-ramblers-docker-image.yml
@@ -9,7 +9,41 @@ on:
 env:
   NODE_VERSION: '22.19.0'
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+
+      - name: Install root dependencies
+        run: npm ci
+
+      - name: Install server dependencies
+        run: npm ci
+        working-directory: ./server
+
+      - name: Setup Chrome for headless tests
+        uses: browser-actions/setup-chrome@v1
+
+      - name: Export CHROME_BIN for Karma
+        run: echo "CHROME_BIN=$CHROME_PATH" >> $GITHUB_ENV
+
+      - name: Set timezone for tests
+        run: echo "TZ=Europe/London" >> $GITHUB_ENV
+
+      - name: Run frontend unit tests (headless)
+        run: npm run test
+
+      - name: Run server unit tests
+        run: npm run test:server
+
   deploy:
+    needs: test
     runs-on: ubuntu-latest
     concurrency: deploy-group
     steps:
