--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lintfix": "ng lint --fix",
     "postbuild": "npm install --prefix server",
     "serve": "ng serve --project ngx-ramblers --configuration development --verbose",
-    "test": "ng test"
+    "test": "ng test --project ngx-ramblers --watch=false --browsers=ChromeHeadless",
+    "test:server": "sh -c 'cd server && npm run unit-test:once'"
   },
   "cacheDirectories": [
     "node_modules",
@@ -38,24 +39,19 @@
     "@fortawesome/free-brands-svg-icons": "6.1.1",
     "@fortawesome/free-solid-svg-icons": "6.1.0",
     "@ng-select/ng-select": "20.1.3",
+    "@popperjs/core": "2.11.8",
     "@yaireo/tagify": "4.35.4",
-    "aws-sdk": "2.596.0",
     "bootstrap": "5.3.8",
-    "copyfiles": "2.1.1",
     "core-js": "3.6.1",
-    "express": "4.17.3",
-    "express-session": "1.17.0",
     "hammerjs": "2.0.8",
     "he": "1.2.0",
     "heic2any": "0.0.4",
-    "jquery": "3.5.0",
     "js-yaml": "3.13.1",
     "json2csv": "4.5.4",
     "jsonc-parser": "3.3.1",
     "leaflet": "1.9.4",
     "lodash-es": "4.17.21",
     "marked": "16.2.1",
-    "matchdep": "2.0.0",
     "meetup-api": "1.4.38",
     "method-override": "3.0.0",
     "moment": "2.24.0",
@@ -73,8 +69,6 @@
     "ngx-tagify": "15.0.5",
     "ngx-ui-switch": "15.0.0",
     "papaparse": "5.5.3",
-    "path": "0.12.7",
-    "@popperjs/core": "2.11.8",
     "rxjs": "7.8.1",
     "server": "1.0.41",
     "turndown": "7.2.0",
@@ -92,7 +86,6 @@
     "@types/leaflet": "1.9.14",
     "@types/lodash-es": "4.17.3",
     "@types/marked": "4.3.2",
-    "@types/mongoose": "5.11.97",
     "@types/turndown": "5.0.5",
     "@types/ws": "8.5.4",
     "codelyzer": "6.0.1",
@@ -104,8 +97,8 @@
     "karma-coverage-istanbul-reporter": "2.1.1",
     "karma-jasmine": "2.0.1",
     "karma-jasmine-html-reporter": "1.5.1",
-    "source-map-explorer": "2.4.2",
     "moment-locales-webpack-plugin": "1.2.0",
+    "source-map-explorer": "2.4.2",
     "ts-node": "10.9.2",
     "tslint": "6.1.3",
     "typescript": "5.9.2",
