--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,7 @@
               "@yaireo/tagify",
               "html2canvas",
               "leaflet",
+              "leaflet.markercluster",
               "lodash",
               "moment-timezone",
               "mongoose"
@@ -55,7 +56,9 @@
             ],
             "styles": [
               "projects/ngx-ramblers/src/app/assets/styles/styles.sass",
-              "node_modules/leaflet/dist/leaflet.css"
+              "node_modules/leaflet/dist/leaflet.css",
+              "node_modules/leaflet.markercluster/dist/MarkerCluster.css",
+              "node_modules/leaflet.markercluster/dist/MarkerCluster.Default.css"
             ],
             "scripts": [
               "./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
