--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "json2csv": "4.5.4",
     "jsonc-parser": "3.3.1",
     "leaflet": "1.9.4",
+    "leaflet.markercluster": "1.5.3",
     "luxon": "3.7.2",
     "marked": "16.2.1",
     "meetup-api": "1.4.38",
@@ -71,6 +72,8 @@
     "papaparse": "5.5.3",
     "rxjs": "7.8.1",
     "server": "1.0.41",
+    "proj4": "2.11.0",
+    "proj4leaflet": "1.0.2",
     "turndown": "7.2.0",
     "url-polyfill": "1.1.12",
     "zone.js": "0.15.0"
