feat(area-map): deliver CMS-driven regional mapping platform (closes #52, closes #53)
Area Map Filtering & Selection:
- Add multi-select ng-select for filtering displayed groups
- Save selected groups to CMS data (persistent across page loads)
- Default shows all groups when none selected
- Populate group list dynamically from fetched area data
- Add AREA_MAP_SELECTED_GROUPS to StoredValue enum

Interactive Hover Popup:
- Implement 800ms hover delay before showing action popup
- Display Leaflet popup with group name and action buttons
- Two tiny badge buttons: "visit group" and "view walks"
- "visit group" navigates to group website
- "view walks" navigates to /walks?search={groupCode} to filter walks
- Auto-hide tooltip when popup appears, restore on close
- Clean Bootstrap-styled popup with circular close button positioned outside
- Compact layout with minimal padding and spacing

Area Data Enhancements:
- Add groupCode field to GroupAreaConfig model
- Update GroupAreasService to include groupCode in all responses
- Pass groupCode through all area data transformations

UI/UX Improvements:
- Remove Region and Map Title fields from site editor (not essential)
- Fix markdown editor Edit/Exit buttons by removing click EventEmitter from badge-button
- Standardize search parameter: rename WALK_QUICK_SEARCH to SEARCH in StoredValue
- Update all walk search references to use consistent SEARCH parameter
- Remove localStorage operations from area-map CMS mode (CMS handles all state)

CMS Integration:
- Update AreaMapCmsService defaults to include selectedGroups: []
- Broadcast selectedGroups changes to update live preview
- Filter map display based on CMS selectedGroups setting
- Sync group selection between editor and preview

Fixes #52, Fixes #53

--- a/server/package.json
+++ b/server/package.json
@@ -6,16 +6,17 @@
   "private": true,
   "scripts": {
     "aws-backup": "ts-node aws-backup/backup-s3-images.ts",
-    "build": "npm run clean-ts && npm run tsc",
+    "build": "npm run clean-ts && npm run tsc && npm run copy-assets",
     "clean": "rimraf target/site/serenity",
     "clean-node": "rm -rf node_modules",
     "clean-ts": "rimraf ts-gen",
+    "copy-assets": "cp -r lib/geojson ts-gen/server/lib/",
     "deploy": "ts-node deploy/deploy-to-environments.ts",
     "lint": "tslint --config ./tslint.json --project ./tsconfig.json --format stylish",
     "lintfix": "tslint --config ./tslint.json --project ./tsconfig.json --format stylish --fix",
     "lintversion": "tslint --version",
     "manage-configs": "ts-node deploy/manage-configs.ts",
-    "postinstall": "tsc",
+    "postinstall": "tsc && npm run copy-assets",
     "postreport": "mkdir -p target/site/archive && tar -czf target/site/archive/serenity-reports.zip -C target/site/serenity .",
     "reinstall": "npm run clean-node && npm install",
     "report": "serenity-bdd run --features lib/serenity-js/features",
@@ -47,6 +48,8 @@
     "@serenity-js/serenity-bdd": "3.31.12",
     "@serenity-js/web": "3.31.12",
     "@serenity-js/webdriverio": "3.31.12",
+    "@turf/turf": "7.2.0",
+    "@turf/union": "7.2.0",
     "@types/bcryptjs": "2.4.6",
     "@types/debug": "4.1.12",
     "@types/expect": "24.3.2",
@@ -85,6 +88,7 @@
     "express": "4.18.2",
     "express-session": "1.17.3",
     "fs": "0.0.1-security",
+    "fs-extra": "11.3.2",
     "inquirer": "12.8.2",
     "js-yaml": "3.13.1",
     "json2csv": "3.11.5",
